--- a/WWW/index.html
+++ b/WWW/index.html
@@ -7,23 +7,23 @@
 	<title> Szybki kurs HTML </title>
 </head>
 <body>
-	<div id="kontener">
-		<div id="baner"><h2>Szybki Kurs HTML</h2></div>
-		<div id="menu">
-			<ul id = "nav">
-				<li><a href="index.html">Podstawowe znaczniki</a></li>
-				<li><a href="tabele.html">Tworzenie tabel </a></li>
+	<main>
+        <header> <h2>Szybki kurs HTML</h2></header>
+        <nav>
+            <ul id="nav">
+				<li><a href="index.html">Podstawy</a></li>
+				<li><a href="tabele.html">Tabele</a></li>
 				<li><a href="">Formularze</a>
-					<ul>
-						<li><a href= "formularze.html"> Pola formularza</a></li>
-						<li><a href= "obliczenia.html"> Obliczenia w formularzu</a></li>
-					</ul>	
-				</li>
-				<li><a href="" title="">Galeria</a></li>
-			</ul>
-		</div>
+        		<ul>
+					<li><a href="formularze.html" >Pola formularza</a></li>
+					<li><a href="obliczenia.html" >Obliczenia w formularzu</a></li>
+                </ul>
+                </li>
+                <li><a href="galeria.html" >Galeria</a></li>
+            </ul> 
+        </nav>
 		
-		<div id="tresc"><h3>Podstawowe znaczniki HTML to:</h3>
+		<article><h3>Podstawowe znaczniki HTML to:</h3>
 			<ul>
 				<li>&lt;html&gt; - korzeń dokumentu</li>
 				<li>&lt;head&gt; - nagłówek strony z informacjami dla przeglądarek</li>
@@ -35,27 +35,27 @@
 				<li>&lt;a&gt; - hiperłącze</li>
 			</ul>
 		<p><a href="https://validator.w3.org/">HTML walidator </a><img src="znak.PNG" alt="W3Schools.com" width="80" height="50"></p></div>
-		<div id="pasek">
-			<div class="box">
-				<h3>Walidatory:</h3>
-					<ul>
-						<li><a href="https://validator.w3.org/">HTML</a></li>
-						<li><a href="https://jigsaw.w3.org/css-validator/">CSS</a></li>
-					</ul>
-			</div>
-			<div class="box">
-				<h3>Kursy:</h3>
-					<ul>
-						<li> <a href="https://www.w3schools.com/html/"> HTML </a></li>
-						<li> <a href="https://www.w3schools.com/css/"> CSS </a></li> 
-						<li> <a href="https://www.w3schools.com/js/"> JS </a></li> 
-						<li> <a href="https://www.w3schools.com/php/"> PHP </a></li>
-					</ul>
-			</div>
-		</div>
-			
-		<div id="stopka">&copy;BP</div>
-	</div>
+		</article>
+		<aside>
+            <div class="box">
+                <h3>Walidatory:</h3>
+                <ul>
+					<li> <a href="http://validator.w3.org/" >HTML </a></li>
+					<li> <a href="http://jigsaw.w3.org/css-validator/" >CSS</a></li>
+                </ul>
+            </div>
+            <div class="box">
+                <h3>Kursy:</h3>
+                <ul>
+					<li> <a href="https://www.w3schools.com/html/" > HTML </a></li>
+					<li> <a href="https://www.w3schools.com/css/" > CSS </a></li>
+					<li> <a href="https://www.w3schools.com/js/" > JS </a></li>
+					<li> <a href="https://www.w3schools.com/php/" > PHP </a></li>
+                </ul>
+            </div>
+        </aside>
+     <footer> &copy;BP </footer>
+    </main>
 </body>
 </html>
 
