--- a/WWW/tabele.html
+++ b/WWW/tabele.html
@@ -1,91 +1,100 @@
-
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="CSS/style.css" type="text/css" />
-		<link rel="stylesheet" href="CSS/tabele.css" type="text/css" />
-	<title> Szybki kurs HTML </title>
-</head>
-<body>
-	<div id="kontener">
-		<div id="baner"><h2>Szybki Kurs HTML</h2></div>
-		
-		<div id="menu">
-			<ul id = "nav">
-				<li><a href="index.html">Podstawowe znaczniki</a></li>
-				<li><a href="tabele.html">Tworzenie tabel </a></li>
-				<li><a href="">Formularze</a>
-					<ul>
-						<li><a href= "formularze.html"> Pola formularza</a></li>
-						<li><a href= "obliczenia.html"> Obliczenia w formularzu</a></li>
-					</ul>	
-				</li>
-				<li><a href="" title="">Galeria</a></li>
-			</ul>
-		</div>
-		<div id="tresc"><h3>Podstawowe znaczniki do tworzenia tabel to:</h3>
-			<ul>
-				<li>&lt;html&gt; - korzeń dokumentu</li>
-				<li>&lt;head&gt; - nagłówek strony z informacjami dla przeglądarek</li>
-				<li>&lt;body&gt; - właściwa treść dokumentu widoczna w oknie przeglądarki</li>
-				<li>&lt;div&gt; - element blokowy</li>
-				<li>&lt;p&gt; - akapit</li>
-				<li>&lt;ol&gt; &lt;ul&gt; i &lt;li&gt; - elementy listy wypunktowanej lub numerowanej</li>
-				<li>&lt;img&gt; - obrazek</li>
-				<li>&lt;a&gt; - hiperłącze</li>
-			</ul>
-		</div>
-		<div id="tabela"><h3>Przykładowa tabela HTML to:</h3>
-			<table>
-				<thead>
-					<tr>
-						<th rowspan = "2">Język Programowania</th>
-						<th colspan = "2">Ocena końcowa</th>
-					</tr>
-					<tr>
-						<th>Luty 2020</th>
-						<th>2015</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Java</td>
-						<td>1</td>
-						<td>2</td>
-					</tr>
-					<tr class="parzysty">
-						<td>C</td>
-						<td>2</td>
-						<td>1</td>
-					</tr>
-					<tr>
-						<td>Python</td>
-						<td>3</td>
-						<td>7</td>
-					</tr>
-					<tr class="parzysty">
-						<td>C++</td>
-						<td>4</td>
-						<td>4</td>
-					</tr>
-					<tr>
-						<td>C#</td>
-						<td>5</td>
-						<td>7</td>
-					</tr>
-				</tbody>
-				<tfoot>
-					<tr>
-						<td colspan = "3" >Na podstawie:
-						<a href = "https://www.tiobe.com/tiobe-index/">https://www.tiobe.com/tiobe-index/ </a></td>
-					</tr>
-				</tfoot>
-			</table>
-		</div>
-		<p></p>
-		<div id="stopka">&copy;BP</div>
-		</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="CSS/style.css" type="text/css" />
+    <link rel="stylesheet" href="CSS/tabele.css" type="text/css" />
+    <title>Szybki kurs HTML</title>
+  </head>
+  <body>
+    <main>
+      <header><h2>Szybki kurs HTML</h2></header>
+      <nav>
+        <ul id="nav">
+          <li><a href="index.html">Podstawowe znaczniki</a></li>
+          <li><a href="tabele.html">Tworzenie tabel </a></li>
+          <li>
+            <a href="">Formularze</a>
+            <ul>
+              <li><a href="formularze.html"> Pola formularza</a></li>
+              <li><a href="obliczenia.html"> Obliczenia w formularzu</a></li>
+            </ul>
+          </li>
+          <li><a href="galeria.html">Galeria</a></li>
+        </ul>
+      </nav>
+      <article>
+        <h3>Podstawowe znaczniki tworzenia tabel to:</h3>
+        <ul>
+          <li>&lt;table&gt; - znacznik zawierający całą tabelę</li>
+          <li>&lt;caption&gt; - tytuł tabeli</li>
+          <li>&lt;thead&gt; - nagłówek tabeli</li>
+          <li>&lt;tbody&gt; - zawartość tabeli</li>
+          <li>&lt;tfoot&gt; - stopka tabeli</li>
+          <li>&lt;tr&gt; - wiersz tabeli</li>
+          <li>&lt;td&gt; - komórka tabeli(zawarta w wierszu)</li>
+          <li>
+            &lt;th&gt; - komórka nagłówkowa tabeli (również zawarta w wierszu)
+          </li>
+        </ul>
+        <h3>Przykładowa tabela HTML:</h3>
+        <table>
+          <caption>
+            Popularność języków programowania
+          </caption>
+          <thead>
+            <tr>
+              <th rowspan="2">Język programowania</th>
+              <th colspan="2">Pozycja</th>
+            </tr>
+            <tr>
+              <th>Luty 2020</th>
+              <th>2015</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Java</td>
+              <td>1</td>
+              <td>2</td>
+            </tr>
+            <tr>
+              <td>C</td>
+              <td>2</td>
+              <td>1</td>
+            </tr>
+            <tr>
+              <td>Pyton</td>
+              <td>3</td>
+              <td>7</td>
+            </tr>
+            <tr>
+              <td>C++</td>
+              <td>4</td>
+              <td>4</td>
+            </tr>
+            <tr>
+              <td>C#</td>
+              <td>5</td>
+              <td>7</td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <td colspan="3">
+                Na podstawie: <br />
+                <a
+                  href="https://www.tiobe.com/index.php/content/papierinfo/tpci/index.html"
+                >
+                  https://www.tiobe.com/index.php/content/papierinfo/tpci/index.html</a
+                >
+              </td>
+            </tr>
+          </tfoot>
+        </table>
+      </article>
+      <footer>&copy;BP</footer>
+    </main>
+  </body>
 </html>
